# temperature-trends-viz

./: .dockerignore  .gitignore  CONFIGURATION.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Makefile  README.md  SETUP.md  cities.json  docker-build-and-push.sh  docker-compose.yml  docker-quick-deploy.sh  pyproject.toml  run.bat  run.sh  test_setup.py  weather.py  weather_gui.py
